src2/objects/NES_StagingTableAssetSettings__c.object
<CustomObject>
    <fields>
        <fullName>CheckboxCurrentValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Current Value of checkbox</description>
        <label>Checkbox Current Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CupHeater__c</fullName>
        <label>Cup Heater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimeCurrentValue__c</fullName>
        <description>Current Value of dateTime</description>
        <label>DateTime Current Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DirectWaterConnection__c</fullName>
        <label>Direct Water Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Specifies what Event Type belongs Every Event according Machine Team: 
Event Name	Event Type 
Event Event	0 
Brew History Event	1 
Pump Maintenance Event	2 
BU Maintenance event	3 
Error Event	4 
Warning Event	5 
Configuration Change Event	6 
Time Change Event	7 
Clean Milk Event	9 
Descaling Event	10 
Filter Change Event	11 
Rinse Coffee Event	12 
Rinse Milk Event	13 
Emptying Event	14</description>
        <label>Event Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modem_Behaviour__c</fullName>
        <description>Field that defines how a Modem Setting needs to be sent to Machine</description>
        <label>Modem Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Modem_Behaviour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modem_Setting_Type__c</fullName>
        <label>Modem Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Setting Configuration</fullName>
                </value>
                <value>
                    <fullName>Event Configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Access__c</fullName>
        <label>Access</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Access</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Asset_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>NES_StagingTableAssetSettings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>NES_StagingTableAssetSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_CheckboxValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DateTimeValue__c</fullName>
        <label>DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_FieldType__c</fullName>
        <label>FieldType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_DataType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Group__c</fullName>
        <label>Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SettingsGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_MaxBufferLogSize__c</fullName>
        <label>Default Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_PicklistValues__c</fullName>
        <label>Picklist Values</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PicklistValues</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SettingsStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_TextValue__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberCurrentValue__c</fullName>
        <description>Current Value of number</description>
        <label>Number Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParamId__c</fullName>
        <label>ParamId</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PicklistCurrentValues__c</fullName>
        <label>Picklist Current Values</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PicklistValues</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SentToIOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to IOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TextCurrentValue__c</fullName>
        <description>Current Value of text</description>
        <label>Text Current Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NES_StagingTableAssetSettings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>NES_Min__c</columns>
        <columns>NES_Max__c</columns>
        <columns>NES_Status__c</columns>
        <columns>NES_Type__c</columns>
        <columns>NES_NumberValue__c</columns>
        <columns>NES_TextValue__c</columns>
        <columns>TextCurrentValue__c</columns>
        <columns>NumberCurrentValue__c</columns>
        <columns>NES_PicklistValues__c</columns>
        <columns>ParamId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UniqueKey__c</columns>
        <columns>NES_Asset_Module__c</columns>
        <columns>NES_Asset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NES_StagingTableAssetSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NES_DefaultMinMaxRange</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
	IF
	( 
		AND
		(
			!ISNULL(NES_Min__c), 
			!ISNULL(NES_MaxBufferLogSize__c)
		), 
		NES_MaxBufferLogSize__c&lt; NES_Min__c, 
		FALSE 
	),
	IF
	( 
		AND
		(
			!ISNULL(NES_Max__c), 
			!ISNULL(NES_MaxBufferLogSize__c)
		), 
		NES_MaxBufferLogSize__c&gt; NES_Max__c, 
		FALSE 
	)
)</errorConditionFormula>
        <errorMessage>Setting default value must be between minimum and maximum value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NES_MaxBiggerThanMin</fullName>
        <active>true</active>
        <errorConditionFormula>IF
(
	!ISNULL(NES_Max__c),
	IF
	(
		!ISNULL(NES_Min__c),
		NES_Max__c &lt; NES_Min__c,
		FALSE
	),
	FALSE
)</errorConditionFormula>
        <errorMessage>Maximum value must be bigger that minimum value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NES_ValueMinMaxRange</fullName>
        <active>true</active>
        <errorConditionFormula>OR
( 
	IF
	( 
		AND
		(
			!ISNULL(NES_Min__c), 
			!ISNULL(NES_NumberValue__c)
		), 
		NES_NumberValue__c&lt; NES_Min__c, 
		FALSE 
	), 
	IF
	( 
		AND
		(
			!ISNULL(NES_Max__c), 
			!ISNULL(NES_NumberValue__c)
		), 
		NES_NumberValue__c&gt; NES_Max__c, 
		FALSE 
	) 
)</errorConditionFormula>
        <errorMessage>Setting value must be between minimum and maximum value.</errorMessage>
    </validationRules>
</CustomObject>